remove large text

--- a/themes/hugoplate/layouts/contact/list.html
+++ b/themes/hugoplate/layouts/contact/list.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 <section class="section-sm">
   <div class="container">
-    <h1 class="text-[{{.Params.large_title.font_size}}] leading-[{{.Params.large_title.line_height}}] font-[{{.Params.large_title.font_weight}}] text-[{{.Params.large_title.color}}] {{ .Params.large_title.font_case}} text-{{ .Params.large_title.text_position}}">{{ .Params.large_title.text }}</h1>
+    {{/*  <h1 class="text-[{{.Params.large_title.font_size}}] leading-[{{.Params.large_title.line_height}}] font-[{{.Params.large_title.font_weight}}] text-[{{.Params.large_title.color}}] {{ .Params.large_title.font_case}} text-{{ .Params.large_title.text_position}}">{{ .Params.large_title.text }}</h1>  */}}
     <div class="row gap-y-8 mt-16">
 
       <div class="lg:col-6">
